# aidp-custom-tools

./: .gitignore  AIDP_FEEDBACK.md  AIDP_SQL_TOOL_DOCS.md  CONFIG.md  INDEX.md  README.md  UI_HINTS_SPEC.md  build_with_config.py  setup.py
CUSTOM_CODE_TEMPLATE/: build.sh  requirements.txt  tool_config.json  tool_implementation.py
CUSTOM_CODE_TEMPLATE/config/: settings.yaml
CUSTOM_CODE_TEMPLATE/docs/: README.md
CUSTOM_CODE_TEMPLATE/utils/: __init__.py  config_utils.py
CUSTOM_CODE_TOOLS/: CREDENTIALS.md
CUSTOM_CODE_TOOLS/_shared/: sync.py  verify_wiring.py
CUSTOM_CODE_TOOLS/aidp_catalog_toolkit/: README.md  TESTING_INSTRUCTIONS.md
CUSTOM_CODE_TOOLS/compute_toolkit/: README.md  TESTING_INSTRUCTIONS.md
CUSTOM_CODE_TOOLS/convert_file_tool/: README.md  TESTING_INSTRUCTIONS.md
CUSTOM_CODE_TOOLS/credential_store_auth_sample/: README.md  verify_pattern.py
CUSTOM_CODE_TOOLS/data_ops_toolkit/: README.md  TESTING_INSTRUCTIONS.md
CUSTOM_CODE_TOOLS/document_extract_tool/: README.md  TESTING_INSTRUCTIONS.md
CUSTOM_CODE_TOOLS/email_toolkit/: README.md  TESTING_INSTRUCTIONS.md
aidp_genai/: README.md
aidp_io/: README.md
aidp_kb/: README.md
aidp_session/: README.md
tests/kb_validation/: README.md  (+1 more)
wizard/: README.md  pyproject.toml
wizard/src/aidp_wizard/: __init__.py  aidp_client.py  app.py  code_gen.py  llm_client.py  state.py  theme.tcss
wizard/src/aidp_wizard/screens/: __init__.py  _base.py  auth.py  build.py  describe.py  generate.py  llm_token.py  resources.py  tool_kind.py  workspace.py
wizard/src/aidp_wizard/widgets/: step_sidebar.py
(+131 files in other folders)
